# openai-agentssdk-handson

./: .env  .gitignore  discuss_marketingData.py  discuss_marketingData_bak  discuss_marketingData_bak2  landingpage_data.csv  pyproject.toml  site_data.csv  stream_handler.py
agentssdk/: pyvenv.cfg
