[project]
name = "openai-agentssdk-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Renz0043",email = "corosuke5225@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents (>=0.0.5,<0.0.6)",
    "pandas (>=2.2.3,<3.0.0)",
    "pandasql (>=0.7.3,<0.8.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
